key features fix

--- a/public/css/contact_us.css
+++ b/public/css/contact_us.css
@@ -1,59 +1,1 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css");
-@font-face {
-  font-family: "Metropolis";
-  src: url("fonts/Metropolis/Metropolis-Regular.eot");
-  /* IE9*/
-  src: url("fonts/Metropolis/Metropolis-Regular.eot?#iefix") format("embedded-opentype"), url("fonts/Metropolis/Metropolis-Regular.otf") format("otf"), url("fonts/Metropolis/Metropolis-Regular.woff2") format("woff2"), url("fonts/Metropolis/Metropolis-Regular.woff") format("woff"), url("fonts/Metropolis/Metropolis-Regular.ttf") format("truetype"), url("fonts/Metropolis/Metropolis-Regular.svg#Metropolis") format("svg");
-  /* iOS 4.1- */
-}
-.contact-us {
-  margin-top: 60px;
-  margin-bottom: 200px;
-}
-.contact-us .contact-us-col:nth-child(1) {
-  margin-right: 140px;
-  width: 60%;
-}
-.contact-us .contact-us-col .contact-us-title {
-  font-weight: 600;
-  font-size: 34px;
-  color: #000000;
-}
-.contact-us .contact-us-col .contact-us-text {
-  font-weight: normal;
-  font-size: 15px;
-  color: #000000;
-  margin-top: 20px;
-  padding-right: 20px;
-}
-.contact-us .contact-us-col form .form-group label {
-  font-weight: normal;
-  font-size: 14px;
-  color: #000000;
-  margin-bottom: 8px;
-}
-.contact-us .contact-us-col form .form-group .form-control {
-  padding-left: 10px;
-  font-weight: normal;
-  font-size: 14px;
-  color: #000000;
-}
-.contact-us .contact-us-col form .form-group .send {
-  max-width: 160px;
-}
-.contact-us .contact-us-col .contact-mail-block {
-  margin-top: 30px;
-}
-.contact-us .contact-us-col .contact-mail-block .contact-for {
-  font-weight: normal;
-  font-size: 15px;
-  color: #000000;
-  margin-bottom: 4px;
-}
-.contact-us .contact-us-col .contact-mail-block .contact-mail {
-  font-weight: 500;
-  font-size: 18px;
-  color: #000000;
-}
-
-/*# sourceMappingURL=contact_us.css.map */
+@import"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css";@font-face{font-family:"Metropolis";src:url("fonts/Metropolis/Metropolis-Regular.eot");src:url("fonts/Metropolis/Metropolis-Regular.eot?#iefix") format("embedded-opentype"),url("fonts/Metropolis/Metropolis-Regular.otf") format("otf"),url("fonts/Metropolis/Metropolis-Regular.woff2") format("woff2"),url("fonts/Metropolis/Metropolis-Regular.woff") format("woff"),url("fonts/Metropolis/Metropolis-Regular.ttf") format("truetype"),url("fonts/Metropolis/Metropolis-Regular.svg#Metropolis") format("svg")}.contact-us{margin-top:60px;margin-bottom:200px}.contact-us .contact-us-col:nth-child(1){margin-right:140px;width:60%}.contact-us .contact-us-col .contact-us-title{font-weight:600;font-size:34px;color:#000}.contact-us .contact-us-col .contact-us-text{font-weight:normal;font-size:15px;color:#000;margin-top:20px;padding-right:20px}.contact-us .contact-us-col form .form-group label{font-weight:normal;font-size:14px;color:#000;margin-bottom:8px}.contact-us .contact-us-col form .form-group .form-control{padding-left:10px;font-weight:normal;font-size:14px;color:#000}.contact-us .contact-us-col form .form-group .send{max-width:160px}.contact-us .contact-us-col .contact-mail-block{margin-top:30px}.contact-us .contact-us-col .contact-mail-block .contact-for{font-weight:normal;font-size:15px;color:#000;margin-bottom:4px}.contact-us .contact-us-col .contact-mail-block .contact-mail{font-weight:500;font-size:18px;color:#000}/*# sourceMappingURL=contact_us.css.map */
