--- a/public/css/key_features.css
+++ b/public/css/key_features.css
@@ -1,132 +1,1 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css");
-@font-face {
-  font-family: "Metropolis";
-  src: url("fonts/Metropolis/Metropolis-Regular.eot");
-  /* IE9*/
-  src: url("fonts/Metropolis/Metropolis-Regular.eot?#iefix") format("embedded-opentype"), url("fonts/Metropolis/Metropolis-Regular.otf") format("otf"), url("fonts/Metropolis/Metropolis-Regular.woff2") format("woff2"), url("fonts/Metropolis/Metropolis-Regular.woff") format("woff"), url("fonts/Metropolis/Metropolis-Regular.ttf") format("truetype"), url("fonts/Metropolis/Metropolis-Regular.svg#Metropolis") format("svg");
-  /* iOS 4.1- */
-}
-.key-features-top {
-  background-image: url("../img/key-features-top-bg.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 400px;
-  width: 100%;
-  margin-bottom: 130px;
-}
-.key-features-top .key-features-top-content .title {
-  font-weight: 600;
-  font-size: 58px;
-  text-align: center;
-  color: #fff;
-  margin-top: 107px;
-  margin-bottom: 10px;
-}
-.key-features-top .key-features-top-content .sub-title {
-  font-weight: 500;
-  font-size: 21px;
-  text-align: center;
-  color: #fff;
-  margin-bottom: 50px;
-}
-.key-features-top .key-features-top-content .btn-wrap a.features-get-started {
-  padding: 16px 24px;
-  width: 180px;
-  height: 52px;
-  background: #F45644;
-  border-radius: 3px;
-  font-weight: 600;
-  font-size: 16px;
-  text-align: center;
-  color: #fff;
-  margin-bottom: 90px;
-}
-
-.key-features-item {
-  margin-top: 60px;
-  margin-bottom: 60px;
-}
-.key-features-item:nth-child(odd) {
-  flex-direction: row-reverse;
-}
-.key-features-item .col-6 .key-features-item-content {
-  max-width: 410px;
-}
-.key-features-item .col-6 .key-features-item-content .key-features-item-icon {
-  margin-bottom: 45px;
-}
-.key-features-item .col-6 .key-features-item-content .key-features-item-title {
-  font-weight: 600;
-  font-size: 24px;
-  color: #241F2D;
-  margin-bottom: 27px;
-}
-.key-features-item .col-6 .key-features-item-content .key-features-item-text {
-  font-weight: normal;
-  font-size: 16px;
-  color: #000000;
-}
-.key-features-item .col-6 .key-features-item-img {
-  max-width: 480px;
-}
-.key-features-item .col-6 .key-features-item-img img {
-  width: 100%;
-}
-
-.key-features-bottom {
-  margin-top: 30px;
-}
-.key-features-bottom .key-features-bottom-content .key-features-bottom-title {
-  margin-top: 35px;
-  margin-bottom: 40px;
-}
-.key-features-bottom .key-features-bottom-content .key-features-bottom-items {
-  margin-top: 40px;
-  margin-bottom: 40px;
-}
-.key-features-bottom .key-features-bottom-content .key-features-bottom-items .key-features-bottom-item {
-  max-width: 310px;
-}
-.key-features-bottom .key-features-bottom-content .key-features-bottom-items .key-features-bottom-item .key-features-bottom-item-img {
-  margin-bottom: 20px;
-}
-.key-features-bottom .key-features-bottom-content .key-features-bottom-items .key-features-bottom-item .key-features-bottom-item-title {
-  margin-bottom: 22px;
-  font-size: 18px;
-  color: #000000;
-}
-.key-features-bottom .key-features-bottom-content .key-features-bottom-items .key-features-bottom-item .key-features-bottom-item-text {
-  font-weight: normal;
-  font-size: 15px;
-  color: #000000;
-}
-.key-features-bottom .key-features-end-bg {
-  background-image: url("../img/hit-bg.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-bottom: 80px;
-  border-radius: 4px;
-  padding: 80px;
-}
-.key-features-bottom .key-features-end-bg h2 {
-  font-weight: bold;
-  font-size: 32px;
-  color: #fff;
-  max-width: 584px;
-}
-.key-features-bottom .key-features-end-bg a.get-started {
-  padding: 16px 24px;
-  width: 180px;
-  height: 52px;
-  background: #F45644;
-  border-radius: 3px;
-  font-weight: 600;
-  font-size: 16px;
-  text-align: center;
-  color: #fff;
-  margin-bottom: 90px;
-  outline: none;
-}
-
-/*# sourceMappingURL=key_features.css.map */
+@import"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css";@font-face{font-family:"Metropolis";src:url("fonts/Metropolis/Metropolis-Regular.eot");src:url("fonts/Metropolis/Metropolis-Regular.eot?#iefix") format("embedded-opentype"),url("fonts/Metropolis/Metropolis-Regular.otf") format("otf"),url("fonts/Metropolis/Metropolis-Regular.woff2") format("woff2"),url("fonts/Metropolis/Metropolis-Regular.woff") format("woff"),url("fonts/Metropolis/Metropolis-Regular.ttf") format("truetype"),url("fonts/Metropolis/Metropolis-Regular.svg#Metropolis") format("svg")}.key-features-top{background-image:url("../img/key-features-top-bg.png");background-position:center;background-repeat:no-repeat;background-size:cover;min-height:400px;width:100%;margin-bottom:130px}.key-features-top .key-features-top-content .title{font-weight:600;font-size:58px;text-align:center;color:#fff;margin-top:107px;margin-bottom:10px}.key-features-top .key-features-top-content .sub-title{font-weight:500;font-size:21px;text-align:center;color:#fff;margin-bottom:50px}.key-features-top .key-features-top-content .btn-wrap a.features-get-started{padding:16px 24px;width:180px;height:52px;background:#f45644;border-radius:3px;font-weight:600;font-size:16px;text-align:center;color:#fff;margin-bottom:90px}.key-features-item{margin-top:60px;margin-bottom:60px}.key-features-item:nth-child(odd){flex-direction:row-reverse}.key-features-item .col-6 .key-features-item-content{max-width:410px}.key-features-item .col-6 .key-features-item-content .key-features-item-icon{margin-bottom:45px}.key-features-item .col-6 .key-features-item-content .key-features-item-title{font-weight:600;font-size:24px;color:#241f2d;margin-bottom:27px}.key-features-item .col-6 .key-features-item-content .key-features-item-text{font-weight:normal;font-size:16px;color:#000}.key-features-item .col-6 .key-features-item-img{max-width:480px}.key-features-item .col-6 .key-features-item-img img{width:100%}.key-features-bottom{margin-top:30px}.key-features-bottom .key-features-bottom-content .key-features-bottom-title{margin-top:35px;margin-bottom:40px}.key-features-bottom .key-features-bottom-content .key-features-bottom-items{margin-top:40px;margin-bottom:40px}.key-features-bottom .key-features-bottom-content .key-features-bottom-items .key-features-bottom-item{max-width:310px}.key-features-bottom .key-features-bottom-content .key-features-bottom-items .key-features-bottom-item .key-features-bottom-item-img{margin-bottom:20px}.key-features-bottom .key-features-bottom-content .key-features-bottom-items .key-features-bottom-item .key-features-bottom-item-title{margin-bottom:22px;font-size:18px;color:#000}.key-features-bottom .key-features-bottom-content .key-features-bottom-items .key-features-bottom-item .key-features-bottom-item-text{font-weight:normal;font-size:15px;color:#000}.key-features-bottom .key-features-end-bg{background-image:url("../img/hit-bg.png");background-repeat:no-repeat;background-size:cover;margin-bottom:80px;border-radius:4px;padding:80px}.key-features-bottom .key-features-end-bg h2{font-weight:bold;font-size:32px;color:#fff;max-width:584px}.key-features-bottom .key-features-end-bg a.get-started{padding:16px 24px;width:180px;height:52px;background:#f45644;border-radius:3px;font-weight:600;font-size:16px;text-align:center;color:#fff;margin-bottom:90px;outline:none}/*# sourceMappingURL=key_features.css.map */
